--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "task-tracker",
   "version": "0.1.0",
-  "homepage": "https://steph-beneschan-256.github.io/sesl-task-tracker",
+  "homepage": "https://steph-beneschan-256.github.io/task-tracker",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
